TextAlign fix

--- a/style.css
+++ b/style.css
@@ -202,3 +202,7 @@ a{
     flex-direction: column;
     justify-content: center;
 }
+
+#piece-gain{
+    text-align: left;
+}
